- apdated slackaware requires
- fixed debian/rules to build the manual only when requested
- fixed config.lua (added mail.org)
29/05/2005 0.0.28
- hotmail.lua: Reacted to changes from MSFT (russell822)
- es: *** empty log message *** (lisar314)
- es: fixed rss (gareuselesinge)
- aol.lua: added aim.com support (russell822)
- mailcom.lua: added supported for iname.com (russell822)
- yahoo.lua, hotmail.lua, aol.lua, netscape.lua: description translations in italian updated (ncocchiaro)
- aol.lua: fix (gareuselesinge)
- hotmail.lua: fixed a minor login issue (russell822)
- : fixed qpr_io_slave (gareuselesinge)
- mailcom.lua: Fixed an issue with usa.com (russell822)
- yahoo.lua: updated required core version (ncocchiaro)
- mailcom.lua: fixed wrong download url (gareuselesinge)
- aol.lua: fixed aim folder names (russell822)
- added cs and fr translations to debian template
- fixed bugs fordebian package (now binary-indep builds the -doc package)
- fixed hotmail.lua and aol.lua, added new netscape.lua (russell822)
- fixed long description of freepops-doc in debian/control
- fixed wrongs uk domains in config.lua
- added yahoo.dk domain to config.lua file
- fixed compilation issue (-lcurses) on suse linux enterprise server 9 (thanks
eddi)
- fixed pipe_uri and pipe_uri_with_header adding mangle_location and continue_or_return
- fixed mimer quoted_printable_io_slave that was returning a wrong len
09/04/2005 0.0.27
- hotmail.lua: A check to make sure that the stat page returned by hotmail is valid. (russell822)
- es: fixed rss (ncocchiaro)
- aol.lua: Updated AOL to handle the new interface. (russell822)
- es: *** empty log message *** (lisar314)
- hotmail.lua: Fixed a bunch of issues related to messages downloading as errors and more accurate stat counts for western languages. (russell822)
- updated some code to make gcc4.0-amd64 happy
- changed string find patten in serialize.lua (thanks flabdablet)
- fixed typos in popserver.c (ncocchiaro)
05/03/2005 0.0.26